--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
+
 }
